--- a/css/cardio.css
+++ b/css/cardio.css
@@ -8,6 +8,13 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+input, textarea
+{
+    background: transparent;
+    border: 1px solid #00a8ff;
+    padding:5px;
+}
+
 .parallax {
 	position: absolute;
 	overflow: hidden;
@@ -49,7 +56,7 @@ body {
 p {
 	font-size: 18px;
 	line-height: 1.5;
-	color: #8a8e91;
+	color: #FFFFFF;
 }
 
 h1,
